# long-video-recording

./: pyproject.toml
src/: main.py  playground.py  timed.py  utils.py
src/__tests__/: test_main.py
