[tool.poetry]
name = "gerbils"
version = "0.1.0"
description = ""
authors = ["Konstantin Spirin <konstmsu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.5.5"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.5"
pytest = "^7.1.1"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
